--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>My GitHub Page</title>
+</head>
+<body>
+    <h1>🎉 My GitHub Page is Live!</h1>
+    <p>If you can see this, GitHub Pages is working correctly.</p>
+</body>
+</html>
 
