--- a/index.html
+++ b/index.html
@@ -2,11 +2,23 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>My GitHub Page</title>
+    <title>My Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 100px;
+            background-color: #f4f4f4;
+        }
+        h1 {
+            color: #333;
+        }
+    </style>
 </head>
 <body>
-    <h1>🎉 My GitHub Page is Live!</h1>
-    <p>If you can see this, GitHub Pages is working correctly.</p>
+    <h1>Welcome to My GitHub Website</h1>
+    <p>Hosted using GitHub Pages 🚀</p>
 </body>
 </html>
+
 
