--- a/index.html
+++ b/index.html
@@ -2,23 +2,94 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>My Website</title>
+    <title>Disaster Management System</title>
     <style>
         body {
+            margin: 0;
             font-family: Arial, sans-serif;
+            background: linear-gradient(to right, #1e3c72, #2a5298);
+            color: white;
             text-align: center;
-            margin-top: 100px;
-            background-color: #f4f4f4;
         }
+
+        header {
+            padding: 40px 20px;
+        }
+
         h1 {
+            font-size: 48px;
+            margin-bottom: 10px;
+        }
+
+        h2 {
+            font-weight: normal;
+            margin-bottom: 30px;
+        }
+
+        .container {
+            background: white;
             color: #333;
+            padding: 40px;
+            border-radius: 10px;
+            width: 80%;
+            margin: auto;
+            margin-bottom: 40px;
+        }
+
+        .button {
+            display: inline-block;
+            padding: 15px 30px;
+            background-color: #1e3c72;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 18px;
+        }
+
+        .button:hover {
+            background-color: #16305a;
+        }
+
+        footer {
+            padding: 20px;
+            font-size: 14px;
         }
     </style>
 </head>
+
 <body>
-    <h1>Welcome to My GitHub Website</h1>
-    <p>Hosted using GitHub Pages 🚀</p>
+
+<header>
+    <h1>Disaster Management System</h1>
+    <h2>Real-Time Emergency Response & Resource Allocation</h2>
+</header>
+
+<div class="container">
+    <h3>Project Overview</h3>
+    <p>
+        This Disaster Management System is designed to efficiently manage and respond 
+        to natural and man-made disasters using technology.
+    </p>
+
+    <h3>Key Features</h3>
+    <ul style="list-style: none; padding: 0;">
+        <li>✔ Real-time disaster reporting</li>
+        <li>✔ Resource allocation tracking</li>
+        <li>✔ Emergency contact management</li>
+        <li>✔ Data-driven decision making</li>
+    </ul>
+
+    <br>
+
+    <a href="#" class="button">View Project Details</a>
+</div>
+
+<footer>
+    Developed by WanderingWizard237 | PBL Project 2026
+</footer>
+
 </body>
 </html>
+
 
 
